Extra tasks added by Fong, and fixed a colour contrast issue in light mode

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -194,6 +194,11 @@ body {
     color: #d8d9ff;
 }
 
+#addtask-navbar {
+    background-color: var(--accent-color-invert);
+    color: light-dark(var(--bulma-primary), var(--bulma-info));
+}
+
 .task-circle {
     position: relative;
     margin: .5em;
